--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.5",
+    "axios": "^0.24.0",
+    "firebase": "^9.2.0",
+    "pusher-js": "^7.0.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -21,5 +24,10 @@
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "react-dotenv": {
+    "whitelist": [
+      "APIKEY"
+    ]
+  }
 }
