--- a/package.json
+++ b/package.json
@@ -24,10 +24,5 @@
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   },
-  "license": "ISC",
-  "react-dotenv": {
-    "whitelist": [
-      "APIKEY"
-    ]
-  }
+  "license": "ISC"
 }
